perbaikan api
